--- a/etc/docker/swarm/docker-compose.yaml
+++ b/etc/docker/swarm/docker-compose.yaml
@@ -7,12 +7,12 @@ services:
     deploy:
       placement:
         constraints:
-        - node.role == worker
+        - node.role == manager
       replicas: 1
       restart_policy:
         condition: any
-    image: secobau/spring-petclinic:0.2
+    image: secobau/spring-petclinic:0.4
     ports:
-      - 80:8080
+      - 8080:8080
 version: '3.8'
 #########################################################################
