--- a/etc/docker/kubernetes/petclinic.yaml
+++ b/etc/docker/kubernetes/petclinic.yaml
@@ -40,7 +40,7 @@ metadata:
   name: petclinic
   namespace: petclinic-0
 spec:
-  host: petclinic.apps.openshift.sebastian-colomar.es
+  host: petclinic-0.apps.openshift.sebastian-colomar.es
   to:
     kind: Service
     name: petclinic
