--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,8 @@ name: CI
 on:
   #push:
    # branches: [ master ]
-  pull_request:
+  #pull_request:
+  push:
     branches: [ main ]
 jobs:
   build:
