--- a/etc/docker/kubernetes/petclinic.yaml
+++ b/etc/docker/kubernetes/petclinic.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       -
-        image: secobau/petclinic
+        image: wweissborn/petclinic
         name: petclinic
 ---
 apiVersion: v1
